[package]
name = "bootloader"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"

[dependencies]
uefi = { version = "0.5.0", features = ["alloc", "logger"] }
uefi-services = "0.2.5"
log = "0.4.11"
embedded-graphics = "0.6.2"
tinybmp = { version = "0.2.3", features = ["graphics"] }
tinytga = { version = "0.3.2", features = ["graphics"] }
memchr = { version = "=2.1", default-features = false }
embedded-text = "0.1.0"
embedded-layout = "0.1.0"
profont = "0.4.0"
uefi-graphics = { path = "../uefi-graphics" }

[package.metadata.cargo-sysroot]
target = "x86_64-unknown-uefi"
