[package]
name = "bootloader"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"

[dependencies]
uefi = { version = "0.5.0", features = ["alloc", "logger"] }
uefi-services = "0.2.5"
log = "0.4.11"
embedded-graphics = "0.6.2"
tinybmp = { version = "0.2.3", features = ["graphics"] }
tinytga = { version = "0.3.2", features = ["graphics"] }
memchr = { version = "=2.1", default-features = false }
embedded-text = "0.2.0"
embedded-layout = "0.1.0"
profont = "0.4.0"
uefi-graphics = { path = "../uefi-graphics" }

# [package.metadata.cargo_runner]
# command = [
#     "qemu-system-x86_64",
#     "-nodefaults",
#     "-machine",
#     "q35",
#     "-smp",
#     "3",
#     "-m",
#     "128M",
#     "--enable-kvm",
#     "-drive",
#     "if=pflash,format=raw,file=/usr/share/edk2-ovmf/x64/OVMF_CODE.fd,readonly=on",
#     "-drive",
#     "if=pflash,format=raw,file=/usr/share/edk2-ovmf/x64/OVMF_VARS.fd,readonly=on",
#     "-drive",
#     "format=raw,file=fat:rw:scratch",
#     "-serial",
#     "stdio",
#     "-device",
#     "isa-debug-exit,iobase=0xf4,iosize=0x04",
#     "-vga",
#     "std",
# ]
